# tierkreis-riken

./: .gitignore  Makefile  pyproject.toml
documentation/source/: index.md
documentation/source/workers/: reimei.md
examples/: compile_ibm.py  qulacs_local.py  snapshot_compile_run.py  sqcsub.py
workers/examples_worker/: main.py  stubs.py
workers/tkr_ibm_kobe/: CMakeLists.txt  README.md  main.py  main.sh  models_ctypes.py  pyproject.toml  stubs.py  submit.py  tkr_sqcsub.c  tkr_sqcsub.cpp  tkr_sqcsub.py  transpile_info.py
workers/tkr_ibm_kobe/scripts/: backend_setup.sh  build.sh  config.sh  fugaku.sh  pybind.sh  run.sh  run_local.sh  setupnanobind.sh  submit.sh  submit_local.sh  transpile_info.sh  transpile_info_local.sh
workers/tkr_ibm_kobe/src/: submit.c  tkr_sqcsub.c
workers/tkr_qulacs/: Dockerfile  check_mpi.py
workers/tkr_reimei/: main.py  pyproject.toml  qnexus_impl.py  stubs.py
workers/tkr_sqcsub/: main.sh  schema.tsp  stubs.py
workers/tkr_sqcsub_convert/: main.py  pyproject.toml  stubs.py
